--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,12 @@
-@import "bootstrap-sprockets";
-@import "bootstrap";
-//@import "chosen.css";
+@import 'bootstrap';
+@imoort 'tree .';
+@import 'posts.scss';
+
+
+.nav-custom {
+  margin-top: 15px;
+}
+
+.logo {
+
+}
