--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,13 +11,6 @@ Posts#index
   </tr>
   </thead>
   <tbody>
-    <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.id %>
-        <td><%= post.date %></td>
-        <td><%= post.user.last_name %></td>
-        <td><%= truncate(post.rationale) %></td>
-      </tr>
-    <% end %>
+    <%= render @posts %>
   </tbody>
 </table>
